force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/gmpkg__Bulk_Action_Job__c.object-meta.xml
<CustomObject>
    <label>Bulk Action Job</label>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Action Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>