force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Action_Name__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Action_Name__c</fullName>
    <label>Action Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>