force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__AsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__AsyncJobId__c</fullName>
    <label>AsyncJobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>