force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Grid_Label__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Grid_Label__c</fullName>
    <label>Grid Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>