force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Grid_Name__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Grid_Name__c</fullName>
    <label>Grid Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>