force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Long_Query__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Long_Query__c</fullName>
    <label>Long Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>