force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Query__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Query__c</fullName>
    <label>Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>