force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__State_Message__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__State_Message__c</fullName>
    <label>State Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>