force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Total_Failed__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Total_Failed__c</fullName>
    <label>Total Failed</label>
    <summaryForeignKey>gmpkg__Bulk_Action_Error__c.gmpkg__Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>