force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Total_Processed__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Total_Processed__c</fullName>
    <formula>gmpkg__Total_Progress__c  -  gmpkg__Total_Failed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>