force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Total_Processing_Time__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Total_Processing_Time__c</fullName>
    <formula>IF( 

OR( 
ISPICKVAL(gmpkg__State__c, &apos;Completed&apos;),
ISPICKVAL(gmpkg__State__c, &apos;Aborted&apos;)  
) ,
  (LastModifiedDate  -  CreatedDate)*24*60*60 , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Processing Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>