force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Total_Progress__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Total_Progress__c</fullName>
    <label>Total Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>