force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Total_To_Process__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Total_To_Process__c</fullName>
    <label>Total To Process</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>