force-app/main/default/objects/gmpkg__Bulk_Action_Job__c/fields/gmpkg__Url__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Url__c</fullName>
    <label>Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>